--- a/Group3.rmd
+++ b/Group3.rmd
@@ -27,6 +27,8 @@ sliderInput("N5S1", "N5",  -5, 0, 0.25, 0.2)
 sliderInput("N6S1", "N6",  -5, 0, 0.25, 0.2)
 sliderInput("N7S1", "N7",  -5, 0, 0.25, 0.2) 
 sliderInput("N8S1", "N8",  -5, 0, 0.25, 0.2)
+sliderInput("X1", "X1",  0, 1, c(0,0.5), 0.05)
+sliderInput("X2", "X2",  0, 1, c(0,0.5), 0.05)
 ```
 
 Column Options {data-width=10%}
@@ -43,14 +45,18 @@ sliderInput("N5S2", "N5",   0, 50,  20,1)
 sliderInput("N6S2", "N6",   0, 50,  20,1)
 sliderInput("N7S2", "N7",   0, 50,  20,1) 
 sliderInput("N8S2", "N8",   0, 50,  20,1)
+sliderInput("Y1", "Y1", -12, 12, c(-6,7), 0.25)
+sliderInput("Y2", "Y2", -12, 12, c(-5,7), 0.25)
+sliderInput("MRG", "MRG", 0,   3,    0.1, 0.3) 
 ```
 
 
 Column {data-width=50%}
 -------------------------------------
  
-### Chart
+### profit varify with discount
 ```{r}
+chooseSliderSkin("Nice")
 renderPlot({
 
   S1=c( input$N1S1, input$N2S1, 
@@ -64,6 +70,7 @@ renderPlot({
         input$N7S2, input$N8S2
     )
   s = c("N1","N2","N3","N4","N5","N6","N7","N8")
+  D = c()
   AS = as.character(s)
   #S是八个status的数组,S1,S2也是对应的弹性系数
   d = seq(0,1,0.01)     #d的座标
@@ -72,7 +79,7 @@ renderPlot({
  #样本画图，x和y的lim由轴决定
   plot(1, 1, col='white', type='l', xlab='discount',
        ylab='PI', main="Expected Payoff" ,
-       xlim=c(0,1),ylim=10**Input$Y1)
+       xlim=input$X1,ylim=10**input$Y1)
        # 两个1是基本设定，后面才是aes的数据部分
        # 加网格线，现在先不加好了
        #  abline(v=seq（0,1,0.1),
@@ -80,16 +87,16 @@ renderPlot({
        #         col='lightgray',lty=3)
 
 #下面给出一个组的PI计算function
-  functionPI = function(d,Status,S1,S2,MRG=Input$MRG){
+  functionPI = function(d,status,S1,S2,MRG=input$MRG){
     # load("C:/1/G/Final-proj-master/tf-pro-rev.rdata")
-    B0 = subset(B,B$Status==Status) #对该小组做分群研究
-    Buy = mean(B0$Buy)
-    Rev = sum(B0$Rev[B0$Rev<12000])  #去除inf的outlier
+    D = subset(B,B$Status==status) #对该小组做分群研究
+    Buy = mean(D$Buy)
+    Rev = sum(D$Rev[D$Rev<12000])  #去除inf的outlier
     ((MRG+1)*(1-d)-1)*Rev*(1-d)*max(Buy*(1+S1*d),1)*(1+S2*d) #小组的PI
     }
   
-  for(i in length(s)) {
-    PI = sapply(d, functionPI, Status=S[i], S1=S1[i],S2=S2[i])
+  for(i in 1:length(s)) {
+    PI = sapply(d, functionPI,status=s[i], S1=S1[i],S2=S2[i])
     nd = d[which.max(PI)]
     AS[i] = sprintf("%s (%f, %f)",s[i],nd,max(PI))
     lines(d, PI, col=i, lwd=2)       #曲线设定
@@ -100,9 +107,11 @@ renderPlot({
   legend("topright",AS,lty=1,col=1:length(s),lwd=2,
          title=" Status, best discount rate, max value of PI")
   })
-  
-### Chart2
+```
+
+### Revenue varify with discount
 ```{r}
+chooseSliderSkin("Nice")
 renderPlot({
 
   S1=c( input$N1S1, input$N2S1, 
@@ -124,26 +133,26 @@ renderPlot({
  #样本画图，x和y的lim由轴决定
   plot(1, 1, col='white', type='l', xlab='discount',
        ylab='Rev', main="Rev-discount" ,
-       xlim=c(0,1),ylim=10**Input$Y2)
+       xlim=input$X2,ylim=10**input$Y2)
        # 两个1是基本设定，后面才是aes的数据部分
        # 加网格线，现在先不加好了
        #  abline(v=seq（0,1,0.1),
        #        h=seq(input$Y4[1],input$Y4[2],1),
        #         col='lightgray',lty=3)
 
-  functionRev = function(d,Status,S1,S2,MRG=Input$MRG){
-    B0  = subset(B,B$Status==Status)
-    Buy = mean(B0$Buy)
-    Rev = sum(B0$Rev[B0$Rev<12000])#同上
+  functionRev = function(d,i,status,S1,S2,MRG=input$MRG){
+    D = subset(B,B$Status==status) #对该小组做分群研究
+    Buy = mean(D$Buy)
+    Rev = sum(D$Rev[D$Rev<12000])  #去除inf的outlier
     Rev*(1-d)*max(Buy*(1+S1*d),1)*(1+S2*d)      #小组的Rev
   }
 
 
-  for(i in length(s)) {
-    Rev = sapply(d, functionRev, Status=S[i], S1=S1[i],S2=S2[i])
-    nd = d[which.max(PI)]
+  for(i in 1:length(s)) {
+    Rev = sapply(d, functionRev, i,status=s[i], S1=S1[i],S2=S2[i])
+    nd = d[which.max(Rev)]
     AS[i] = sprintf("%s (%f, %f)",s[i],nd,max(Rev))
-    lines(d, Rev, col=i, lwd=2)       #曲线设定
+    lines(d, Rev, col=i, lwd=2)        #曲线设定
     points(nd, max(Rev),col=i,pch=19)  #画出最高点
     }
   
@@ -151,13 +160,5 @@ renderPlot({
   legend("topright",AS,lty=1,col=1:length(s),lwd=2,
          title=" Status, best discount rate, max value of Rev")
   })
-```
 
-### Chart3
-```{r}
-inputPanel(
-    sliderInput("Y1", "Y軸", -6, 6, c(-6,7), 1),
-    sliderInput("Y2", "Y軸", 0, 2400, c(-5,8),1),
-    sliderInput("MRG", "MRG", 0, 3, 0.1, 0.3) 
-)
 ```
